--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,9 +1,35 @@
-body {
-  background-color: red;
+:root {
+  --branding-color: #6c63ff;
+  --heading-font-family: "Playfair Display", serif;
+}
+.hero {
+  background-color: #f9f7fe;
+  text-align: center;
+  padding: 160px 20px;
+}
+.hero h2 {
+  font-family: "Poppins", sans-serif;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 2;
+  color: #272142;
+}
+.hero p {
+  font-family: "Poppins", sans-serif;
+  font-size: 36px;
+  font-weight: normal;
+  margin: 0;
 }
 h1 {
-  font-family: "Playfair Display", serif;
+  font-family: var(--heading-font-family);
+  font-weight: bold;
+  font-size: 96px;
 }
-p {
-  font-family: "Poppins", sans-serif;
+.btn-branding {
+  background-color: var(--branding-color);
+  border-radius: 4px;
+  color: white;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
 }
