--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -51,6 +51,17 @@ h1 {
 .project-description {
   padding: 120px 60px;
 }
+.about-section {
+  padding: 120px 60px;
+}
+.about-section h1 {
+  font-size: 64px;
+  line-height: 80px;
+}
+.about-section p {
+  font-size: 18px;
+  font-family: "Poppins", sans-serif;
+}
 @media (max-width: 960px) {
   h1 {
     font-size: 44px;
@@ -65,5 +76,9 @@ h1 {
   .project-description {
     padding: 0;
     text-align: center;
+  }
+  .about-section {
+    text-align: center;
+    padding: 0;
   }
 }
