--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -51,14 +51,23 @@ h1 {
 .project-description {
   padding: 120px 60px;
 }
-.about-section {
+.content-container {
   padding: 120px 60px;
 }
-.about-section h1 {
+.content h1 {
   font-size: 64px;
   line-height: 80px;
 }
-.about-section p {
+.content h3 {
+  font-size: 24px;
+  font-family: "Poppins", sans-serif;
+  line-height: 1.5;
+  margin: 20px 0 0;
+}
+.content p {
+  font-size: 14px;
+}
+.content-container p {
   font-size: 18px;
   font-family: "Poppins", sans-serif;
 }
@@ -77,7 +86,7 @@ h1 {
     padding: 0;
     text-align: center;
   }
-  .about-section {
+  .content-container {
     text-align: center;
     padding: 0;
   }
