--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -71,6 +71,30 @@ h1 {
   font-size: 18px;
   font-family: "Poppins", sans-serif;
 }
+nav li {
+  display: inline;
+  list-style: none;
+  line-height: 42px;
+  margin-left: 10px;
+}
+nav ul {
+  padding: 0;
+  margin: 0;
+}
+nav {
+  padding: 20px 0;
+}
+nav a {
+  text-decoration: none;
+  color: #272142;
+}
+nav a:hover {
+  color: var(--branding-color);
+}
+
+nav li.active a {
+  color: var(--branding-color);
+}
 @media (max-width: 960px) {
   h1 {
     font-size: 44px;
