--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -26,6 +26,9 @@ h1 {
   font-size: 96px;
   line-height: 1.5;
 }
+h4 {
+  font-size: 48px;
+}
 .btn-branding {
   background-color: var(--branding-color);
   border-radius: 4px;
@@ -95,6 +98,41 @@ nav a:hover {
 nav li.active a {
   color: var(--branding-color);
 }
+footer {
+  margin: 60px 0;
+}
+footer.contact-box {
+  background: #f9f7fe;
+  padding: 30px 120px;
+  border-radius: 10px;
+}
+footer.contact-box p {
+  margin: 0;
+}
+footer .email-link {
+  text-decoration: none;
+  font-size: 24px;
+  color: black;
+  text-align: center;
+}
+footer .email-link:hover {
+  color: var(--branding-color);
+}
+footer .social-links a {
+  margin: 0 20px;
+  font-size: 18px;
+  color: var(--branding-color);
+  background-color: #f9f7fe;
+  padding: 10px;
+  border-radius: 50%;
+  transition: all 100ms ease-in-out;
+}
+
+footer .social-links a:hover {
+  color: white;
+  background-color: var(--branding-color);
+}
+
 @media (max-width: 960px) {
   h1 {
     font-size: 44px;
@@ -102,6 +140,9 @@ nav li.active a {
   }
   h2 {
     font-size: 44px;
+  }
+  h4 {
+    font-size: 18px;
   }
   .hero {
     padding: 80px 20px;
@@ -114,4 +155,6 @@ nav li.active a {
     text-align: center;
     padding: 0;
   }
-}
+  .btn {
+    font-size: 18px;
+  }
