--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -133,6 +133,9 @@ footer .social-links a:hover {
   background-color: var(--branding-color);
 }
 
+#me_img {
+  border-radius: 50%;
+}
 @media (max-width: 960px) {
   h1 {
     font-size: 44px;
